# pavilion

./: .env-example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PRODUCT.md  PROJECT.md  README.md  docker-compose.prod.yml  docker-compose.yml
crates/pavilion-media/: Cargo.toml
crates/pavilion-media/src/: config.rs  error.rs  lib.rs  manifest.rs  storage.rs  token.rs  transcode.rs
db/: schema.surql  seed.surql
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  sse.rs  templates.rs  util.rs
src/auth/: claims.rs  middleware.rs  mod.rs  password.rs
src/billing/: credits.rs  metering.rs  mod.rs  tiers.rs
src/controllers/: acquisitions.rs  admin.rs  auth.rs  billing.rs  catalog.rs  dmca.rs  enrichment.rs  events.rs  films.rs  home.rs  legal.rs  licenses.rs  mod.rs  payments.rs  platforms.rs  player.rs  profile.rs  ratings.rs  revenue.rs  settings.rs  showcase.rs  transcode.rs  upload.rs
src/db/: mod.rs
src/delivery/: audit.rs  mod.rs
src/licensing/: mod.rs  rights.rs
src/media/: enrichment.rs  images.rs  mod.rs  presigned.rs
src/models/: acquisition.rs  dmca.rs  event.rs  film.rs  license.rs  mod.rs  person.rs  platform.rs  rating.rs  transcode.rs
src/payments/: entitlements.rs  mod.rs  provider.rs  stripe.rs
src/revenue/: mod.rs  splits.rs  stats.rs
src/transcode/: mod.rs  queue.rs  reaper.rs  worker.rs
static/css/: main.css
templates/: base.html
templates/components/: nav.html
templates/pages/: acquisition_result.html  admin_dashboard.html  admin_dmca.html  admin_persons.html  billing.html  catalog.html  catalog_film.html  checkout_disabled.html  content_policy.html  dmca_agent.html  dmca_claims.html  dmca_form.html  enrich_preview.html  enrich_search.html  error_404.html  error_500.html  event_detail.html  event_new.html  events_index.html  film_detail.html  film_new.html  film_requests.html  films_index.html  home.html  license_new.html  licenses_index.html  login.html  payment_settings.html  platform_analytics.html  platform_dashboard.html  platform_new.html  platforms_index.html  player.html  privacy.html  profile.html  public_platform.html  public_platform_film.html  register.html  revenue.html  settings_privacy.html  (+2 more)
tests/: admin_test.rs  auth_test.rs  billing_test.rs  catalog_test.rs  dmca_test.rs  event_test.rs  films_test.rs  healthcheck_test.rs  license_test.rs  payment_test.rs  platform_test.rs  player_test.rs  rating_test.rs  revenue_test.rs  transcode_test.rs
(+12 files in other folders)
